feat: Add code for simulating a drop on a soft solid film in equilibrium
This commit adds code to simulate a viscous liquid drop resting on a soft solid film until it reaches equilibrium. The code includes initialization, boundary conditions, error tolerances, and other necessary parameters for the simulation.

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,20 @@ intermediate*
 restart*
 dump*
 intermediate/*
+intermediate*/*
 Video*
 *.mp4 
 */*.mp4
+log
+log_restart
+equilibriumSolution
+.qcc*
+*.html
+
+# do not remove the .c file -- but remove the binary ones
+equilibrium
+softsliding 
+
 # Prerequisites
 *.d
 
